tests/sumo/basic/person/errors/testsuite.sumo
# handle invalid input without crashing
# 
invalid_busstop
duplicate_id
